Source/Alternet.UI/Native/Application.Generated.cs

        
        IntPtr OnEvent(NativeApi.ApplicationEvent e, IntPtr parameter)
        {
            switch (e)
            {
                case NativeApi.ApplicationEvent.Idle:
                {
                    Idle?.Invoke(); return IntPtr.Zero;
                }
                case NativeApi.ApplicationEvent.LogMessage:
                {
                    LogMessage?.Invoke(); return IntPtr.Zero;
                }
                case NativeApi.ApplicationEvent.QueryEndSession:
                {
                    QueryEndSession?.Invoke(); return IntPtr.Zero;
                }
                case NativeApi.ApplicationEvent.EndSession:
                {
                    EndSession?.Invoke(); return IntPtr.Zero;
                }
                case NativeApi.ApplicationEvent.ActivateApp:
                {
                    ActivateApp?.Invoke(); return IntPtr.Zero;
                }
                case NativeApi.ApplicationEvent.Hibernate:
                {
                    Hibernate?.Invoke(); return IntPtr.Zero;
                }
                case NativeApi.ApplicationEvent.DialupConnected:
                {
                    DialupConnected?.Invoke(); return IntPtr.Zero;
                }
                case NativeApi.ApplicationEvent.DialupDisconnected:
                {
                    DialupDisconnected?.Invoke(); return IntPtr.Zero;
                }
                case NativeApi.ApplicationEvent.ExceptionInMainLoop:
                {
                    ExceptionInMainLoop?.Invoke(); return IntPtr.Zero;
                }
                case NativeApi.ApplicationEvent.UnhandledException:
                {
                    UnhandledException?.Invoke(); return IntPtr.Zero;
                }
                case NativeApi.ApplicationEvent.FatalException:
                {
                    FatalException?.Invoke(); return IntPtr.Zero;
                }
                case NativeApi.ApplicationEvent.AssertFailure:
                {
                    AssertFailure?.Invoke(); return IntPtr.Zero;
                }
                default: throw new Exception("Unexpected ApplicationEvent value: " + e);
            }
        }
        
        public Action? Idle;
        public Action? LogMessage;
        public Action? QueryEndSession;
        public Action? EndSession;
        public Action? ActivateApp;
        public Action? Hibernate;
        public Action? DialupConnected;
        public Action? DialupDisconnected;
        public Action? ExceptionInMainLoop;
        public Action? UnhandledException;
        public Action? FatalException;
        public Action? AssertFailure;
        
        [SuppressUnmanagedCodeSecurity]
        public class NativeApi : NativeApiProvider
        {
            static NativeApi() => Initialize();
            
            [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
            public delegate IntPtr ApplicationEventCallbackType(IntPtr obj, ApplicationEvent e, IntPtr param);
            
            public enum ApplicationEvent
            {
                Idle,
                LogMessage,
                QueryEndSession,
                EndSession,
                ActivateApp,
                Hibernate,
                DialupConnected,
                DialupDisconnected,
                ExceptionInMainLoop,
                UnhandledException,
                FatalException,
                AssertFailure,
            }
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Application_SetEventCallback_(ApplicationEventCallbackType callback);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr Application_Create_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern string Application_GetEventArgString_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern string Application_GetName_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Application_SetName_(IntPtr obj, string value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr Application_GetKeyboard_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr Application_GetMouse_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr Application_GetClipboard_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern string Application_GetDisplayName_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Application_SetDisplayName_(IntPtr obj, string value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern string Application_GetAppClassName_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Application_SetAppClassName_(IntPtr obj, string value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern string Application_GetVendorName_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Application_SetVendorName_(IntPtr obj, string value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern string Application_GetVendorDisplayName_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Application_SetVendorDisplayName_(IntPtr obj, string value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Application_GetInUixmlPreviewerMode_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Application_SetInUixmlPreviewerMode_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Application_GetInvokeRequired_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Application_SetGtkCss_(bool inject, string css);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.UI.PropertyUpdateResult Application_SetAppearance_(IntPtr obj, Alternet.UI.ApplicationAppearance appearance);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Application_GetEventIdentifiers_(System.Int32[] eventIdentifiers, int eventIdentifiersCount);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Application_ThrowError_(int value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Application_SetSystemOptionInt_(string name, int value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Application_Run_(IntPtr obj, IntPtr window);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr Application_GetTopWindow_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Application_ExitMainLoop_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Application_WakeUpIdle_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Application_Exit_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Application_SuppressDiagnostics_(int flags);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Application_BeginInvoke_(IntPtr obj, PInvokeCallbackActionType action);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Application_ProcessPendingEvents_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Application_HasPendingEvents_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr Application_GetDisplayMode_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Application_GetExitOnFrameDelete_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int Application_GetLayoutDirection_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Application_GetUseBestVisual_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Application_IsActive_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Application_SafeYield_(IntPtr obj, System.IntPtr window, bool onlyIfNeeded);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Application_SafeYieldFor_(IntPtr obj, System.IntPtr window, long eventsToProcess);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Application_SetDisplayMode_(IntPtr obj, System.IntPtr videoMode);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Application_SetExitOnFrameDelete_(IntPtr obj, bool flag);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Application_SetNativeTheme_(IntPtr obj, string theme);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Application_SetTopWindow_(IntPtr obj, System.IntPtr window);
